2.1.1 (released xx.xx.xxxx)
  *

2.1.0 (released 17.01.2024)

* Document all functions and modules, and add linting rule for it.
* Remove spaces between function and argument list
  Closes: GH bug #100
* Log warnings when subprocesses in utility functions return errors
  that are ignored.
* Fix a TypeError when using unar with passwords.
  Thanks to Kevin Matt for the patch.
  Closes: GH bug #144
* Catch errors when using file --uncompress on system which do not support this.
  Closes: GH bug #141


2.0.0 (released 14.11.2023)

* Require Python >= 3.10
* Use Python logging module instead of print() for diagnostic output.
  Diagnostic output of patool will now be printed on stderr instead of
  stdout.
  This change is the reason for the major version number increase.
  Closes: GH bug #37
* Support the jar program to list and extract ZIP archives.
* Do not use the -v option when extracting or testing ZIP archives
  with unzip, since -v lists files instead of printing verbose output.
  Closes: GH bug #49
* Use the -sae option for 7z to use the provided archive name.
  Closes: GH bug #72
* Add error message about temporary directory when extraction fails.
  Closes: GH bug #57
* Removed the recompress command.
* Use the new filter option when extracting TAR archives with the tarfile
  module in Python >= 3.12 to detect unsafe archive entries.
* Added new command "patool version" to print version information.
* Do not use maximum compression anymore, the default settings should
  be good enough for our standard use case.
* Restore original file name for GZIP (.gz) archives.
  Closes: GH bug #67


1.15.0 (released 28.10.2023)

* Added support for LZ4 archives with the lz4 tool.
  Closes: GH bug #46
* Use correct registry key flag for 32-bit Python on 64-bit Windows
  when detecting 7z.
  Closes: GH bug #35
* Fix configuration for listing .bz2 and .bz3 archives.
* Added support for the unar program which can extract a lot of