@@ -1,5 +1,8 @@
 2.1.1 (released xx.xx.xxxx)
-  *
+
+* Added support for 7zz and 7zzs programs from the Linux-specific release
+  of 7-Zip.
+  Closes: GH bug #145
 
 2.1.0 (released 17.01.2024)
 
